2008-12-01  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.34.

2008-12-01  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.21 release.

2008-12-01  Thomas Thurman  <tthurman@gnome.org>

	* configure.in: gnome-doc-tools version doesn't need to be so high.
	* src/compositor/compositor-xrender.c: disable the entire file if the
          compositor is disabled.
	* src/core/async-getprop.[ch]: fixes for -Wall
	* src/core/iconcache.c: fixes for -Wall
	* src/core/testasyncgetprop.c: fixes for -Wall
	* src/core/xprops.c: fixes for -Wall

2008-11-26  Thomas Thurman  <tthurman@gnome.org>

	* tools/announce-wrangler.py: linked language codes to po files
	* tools/commit-wrangler.py: print revision url

2008-11-26  Thomas Thurman  <tthurman@gnome.org>

	* tools/announce-wrangler.py: renamed ini file
	* tools/commit-wrangler.py: rewriting in terms of moap

2008-11-25  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.21.

2008-11-25  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.13 release.

2008-11-26  Thomas Thurman  <tthurman@gnome.org>

	* tools/announce-wrangler.py (added): script to produce announcements

2008-11-26  Thomas Thurman  <tthurman@gnome.org>

	* src/core/xprops.c: add casts (#562106)

2008-11-25  Thomas Thurman  <tthurman@gnome.org>

	* metacity.doap: change to standard description.

2008-11-23  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.13.

2008-11-23  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.8 release.

2008-11-23  Thomas Thurman  <tthurman@gnome.org>

        * po/POTFILES.in: add new bindings file

2008-11-23  Daniel Macks  <dmacks@netspace.org>

	reviewed by: Thomas Thurman

	* src/Makefile.am: reorder compiler flags so local includes come last.
	  Closes #562033.

2008-11-23  Daniel Macks  <dmacks@netspace.org>

	reviewed by: Thomas Thurman
